--- a/mode2/styles2.css
+++ b/mode2/styles2.css
@@ -71,13 +71,14 @@ body {
 }
 
 #grid-container {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: grid;
     grid-template-columns: repeat(5, 100px);
     grid-template-rows: repeat(5, 100px);
-    gap: 2px; /* Reduced gap for better alignment */
+    gap: 2px; /* Adjusted gap */
     z-index: 10;
 }
 
