--- a/mode2/styles2.css
+++ b/mode2/styles2.css
@@ -60,26 +60,28 @@ body {
 #score-display {
     font-weight: bold;
 }
-#main-svg {
-    width: 510px;
+
+#game-container {
+    position: relative;
+    width: 510px; /* 5 cells x 100px + 4 gaps x 2px = 508px, rounded to 510px */
     height: 510px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: auto;
+}
+
+#main-svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     z-index: 1;
 }
 
 #grid-container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     display: grid;
     grid-template-columns: repeat(5, 100px);
     grid-template-rows: repeat(5, 100px);
     gap: 2px;
-    z-index: 10;
 }
 
 .grid-cell {
@@ -90,11 +92,10 @@ body {
     cursor: pointer;
     box-sizing: border-box;
     position: relative;
-    z-index: 10;
 }
 
 #line-group {
-    z-index: 20; /* Ensure circles are above grid cells */
+    z-index: 20; /* Ensure lines are above grid cells */
 }
 
 .connection-node {
@@ -104,7 +105,9 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: transparent;
+    background-color: #333333; /* Dark grey for visibility; change to 'transparent' if desired */
+    border-radius: 50%;
+    z-index: 30; /* Above lines */
 }
 
 .grid-cell.filled.player1 {
@@ -118,37 +121,6 @@ body {
 .grid-cell.selected {
     border: 3px solid yellow;
     box-sizing: border-box;
-}
-
-.connection-node {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 10px; /* 10% of block width (100px) */
-    height: 10px;
-    background-color: #333333; /* Dark grey */
-    border-radius: 50%;
-    z-index: 30; /* Above lines */
-}
-
-#main-svg {
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
-}
-
-#line-svg {
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 20; /* Above grid cells and #main-svg */
-    pointer-events: none; /* Ensure the SVG doesn't block mouse events */
 }
 
 #connection-input {
@@ -206,8 +178,3 @@ body {
     border: 1px solid #6273B4;
     border-radius: 5px;
 }
-
-#game-window-container {
-    position: relative;
-}
-
